--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalized Chairs</title>
+    <title>Chairify</title>
+    <link rel="icon" href="images/logo.png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Personalized Chairs</h1>
-    <p>
-        Welcome to our store! here we will make your dreams come true.
-    </p>
+    <header>
+        <h1 id="greeting">Welcome to Chairify!</h1>
+        <nav class="navbar">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="product_1.html">Products</a></li>
+                <li><a href="">Sales</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h3>This is our home page</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat labore, asperiores cum sint natus commodi blanditiis tenetur vitae, facere nobis ipsam doloremque vel dicta fuga nemo voluptas beatae et eos!</p>
+    </main>
+    <footer>
+
+    </footer>
+    
 </body>
 </html>
