contact y products .html

--- a/index.html
+++ b/index.html
@@ -4,28 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chairify</title>
-    <link rel="icon" href="images/logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/icon.png">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header>
-        <h1 id="greeting">Welcome to Chairify!</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="product_1.html">Products</a></li>
-                <li><a href="">Sales</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h3>This is our home page</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat labore, asperiores cum sint natus commodi blanditiis tenetur vitae, facere nobis ipsam doloremque vel dicta fuga nemo voluptas beatae et eos!</p>
-    </main>
-    <footer>
-
-    </footer>
     
+<header>
+    <h1 id="greeting">Welcome to Chairify!</h1>
+    <nav class="navbar">
+        <img src="images/logo.png" alt="Chairify Logo" class="logo">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+    <section class="hero">
+        <h2>Premium Chairs for Your Comfort</h2>
+        <p>Discover our exclusive collection of ergonomic designs</p>
+        <a href="products.html" class="btn">Shop Now</a>
+    </section>
+    <section id="features" class="features">
+        <div class="feature-card">
+            <h3>Ergonomic Design</h3>
+            <p>Our chairs are designed for maximum comfort and support.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Premium Materials</h3>
+            <p>Only the highest quality materials for lasting durability.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Modern Styles</h3>
+            <p>Contemporary designs to complement any space.</p>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 Chairify. All rights reserved.</p>
+        <div class="social-links">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
