--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chairify - Contact</title>
-    <link rel="icon" href="../images/logo.png">
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="icon" href="images/logo.png">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     
