--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chairify - Contact</title>
-    <link rel="icon" href="images/logo.png">
+    <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
     <main>
         <section class="contact-form">
             <h2>Get in Touch</h2>
+            <br>
             <form>
                 <div class="form-group">
                     <label for="name">Name:</label>
